generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./metadata"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id String @id @default(uuid())

  email String @unique
  name  String

  password_hash String

  language String?

  tasks    Task[]        @relation(name: "Task_User")
  sessions UserSession[] @relation(name: "UserSession_User")

  payload Json

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@map("users")
}

model UserSession {
  id String @id @default(uuid())

  user_id String
  user    User   @relation(name: "UserSession_User", fields: [user_id], references: [id])

  token      String
  expires_at DateTime

  payload Json

  canceled_at DateTime?

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@map("user_sessions")
}

model Task {
  id String @id @default(uuid())

  title       String
  description String
  status      String

  user_id String
  user    User   @relation(name: "Task_User", fields: [user_id], references: [id])

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@map("tasks")
}
